Add some stuff about answers

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -51,7 +51,23 @@ At present, the unit tests in `yt` take a considerable amount of time to run, an
 The most time-consuming part of the testing process is what we refer to as "answer testing."
 Because so much of `yt` is focused on computing analysis results, and because some of these analysis results simultaneously depend on specific IO routines, selection routines, and many "frontend-specific" pieces of code, we have built a system for ensuring that for a given set of analysis operations, the result of a set of operations does not change beyond a fixed (typically quite small) tolerance.
 
+In general, we allow three different classes of answers, against which we compare results from the current version of the code:
 
+ 1. Data values which should not ever change unless an explicit decision is made (i.e., raw data values accessed from on-disk fields)
+ 2. Lightly-processed data values which we do not anticipate any deviation from exact, ordered values (i.e., averages, extrema, etc.)
+ 3. Higher-level processed values which may differently accumulate error across platforms and architectures but are still within fine-grained ($\equiv 10^{-7}$) tolerance (i.e., images, pixelized projections, etc.)
+
+In the first case, we can utilize hashing functions (such as MD5 and SHA) to guarantee consistency across executions.
+Typically, however, we store the full set of values to facilitate easy comparison.
+In the latter two cases, we apply unit-aware relative tolerances.
+This allows for changes in unit assignment to be isolated from changes in value, and furthermore allows minor migration of values.
+A recent incident in which these tests needed to be changed resulted from minor differences as a result of consolidating operations within a loop to conserve memory; the code in question was converted to Cython and the drift was on the scale of $10^{-10}$.
+
+For small-scale answer tests, results are stored in a separate repository that is cloned as a subrepository of the principle ``yt`` repository.
+When a new set of answers are needed, they are submitted via pull request, and the changeset hash used for answer validation is updated in the main repository.
+This allows a different cadence, and also enables individuals *not* interested in updating answer values to avoid cloning the subrepository and its full history.
+Larger dataset answers are stored in on our continuous integration servers; a YAML file in the main ``yt`` repository stores the current "version" of those answers, and when a new set is needed to be generated (following a pull request) the version number is incremented.
+Requiring this clear decision-making process allows for both collaborative discussion and community governance over the degree of answer drift allowed.
 
 ### Code Review
 
