Apply suggestions from code review
Co-authored-by: Clément Robert <cr52@protonmail.com>

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -66,7 +66,7 @@ A recent incident in which these tests needed to be changed resulted from minor 
 For small-scale answer tests, results are stored in a separate repository that is cloned as a subrepository of the principle ``yt`` repository.
 When a new set of answers are needed, they are submitted via pull request, and the changeset hash used for answer validation is updated in the main repository.
 This allows a different cadence, and also enables individuals *not* interested in updating answer values to avoid cloning the subrepository and its full history.
-Larger dataset answers are stored in on our continuous integration servers; a YAML file in the main ``yt`` repository stores the current "version" of those answers, and when a new set is needed to be generated (following a pull request) the version number is incremented.
+Larger dataset answers are stored in on our continuous integration servers; a YAML file in the main ``yt`` repository stores the current version number for those answers, which is incremented (via a pull request) when needed.
 Requiring this clear decision-making process allows for both collaborative discussion and community governance over the degree of answer drift allowed.
 
 ### Code Review
@@ -84,7 +84,7 @@ One increasing issue with the code review process is ensuring that changes are r
 
 Recently, we have begun utilizing the ["auto-merge" feature](https://github.blog/changelog/2021-02-04-pull-request-auto-merge-is-now-generally-available/) provided by GitHub.
 This allows a maintainer to mark a pull request as "queued" to be merged once a set of requirements -- such as tests passing, approval messages, comment resolution and so forth -- are met.
-One of the most pressing bottlenecks with code review is that the time it takes the continuous integration tests to pass is much longer than the typical time span during with code review takes place.
+One of the most pressing bottlenecks with code review is that the time it takes for tests to pass is much longer than the typical time span during with code review takes place.
 This results in a pull request being merged, and then whatever pull request is next to be reviewed has to wait until the tests (now updated with the newly accepted pull request) pass.
 By queuing up pull requests for merging, it allows maintainers to mark a set of pull requests as ready to be merged, and then when they meet the appropriate (automated and asynchronous) criteria, they will be merged.
 
