--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -103,7 +103,7 @@ This allows "drive-by" contributions to have their pull requests updated inline 
 ### Type Hinting
 
 Code included in ``yt`` is not required to utilize [type hinting](https://docs.python.org/3/library/typing.html).
-However, new contributions are allowed to include type hinting, and work is underway to develop an ontology of types as well as a base set of utilities and types that can be used both internally and by external package developers.
+However, new contributions are allowed to include type hinting, and work is underway to develop an ontology of types as well as a base set of utilities and types that would be used both internally, and possibly be made available to external package developers.
 
 ### YTEP Process {#sec:ytep}
 
