add a paragraph on pre-commit and pre-commit.ci

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -92,6 +92,13 @@ By queuing up pull requests for merging, it allows maintainers to mark a set of 
 ### Code Styling and Linting
 
 For code included in ``yt``, a set of styles are enforced.
+
+We rely on the [``pre-commit``](https://pre-commit.com) framework, which enables
+automated checks as well as automatic fixes at commit time. This tool is an
+opt-in so not every flyby contributor has to learn and install it, but
+continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so
+styling errors cannot slip in.
+
 We use the automated code styling tool [``black``](https://black.readthedocs.io/en/stable/), which has been designed to maximize readability with as few free parameters as possible.
 (In many ways, the fact that most of the ``yt`` code developers did not utilize this style before it was enforced likely enabled its uptake, as it was seen as an choice that "made everyone compromise.")
 In addition to code formatting, other automated methods for code consistency are applied; at present, this includes ensuring that all ``import`` statements are sorted (according to alphabetical order within a first/second/third-party categorization).
