--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -100,7 +100,7 @@ continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so
 styling errors cannot slip in.
 
 We use the automated code styling tool [``black``](https://black.readthedocs.io/en/stable/), which has been designed to maximize readability with as few free parameters as possible.
-(In many ways, the fact that most of the ``yt`` code developers did not utilize this style before it was enforced likely enabled its uptake, as it was seen as an choice that "made everyone compromise.")
+(In many ways, the fact that most of the ``yt`` code developers did not utilize this style before it was enforced likely enabled its uptake, as it was seen as a choice that "made everyone compromise.")
 In addition to code formatting, other automated methods for code consistency are applied; at present, this includes ensuring that all ``import`` statements are sorted (according to alphabetical order within a first/second/third-party categorization).
 Past iterations of this automated formatting have also included ensuring that ["f-strings"](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals) are used wherever possible, but at present we have slightly loosened this requirement.
 
