use semantic line breaks

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -93,41 +93,25 @@ By queuing up pull requests for merging, it allows maintainers to mark a set of 
 
 For code included in ``yt``, a set of styles are enforced.
 
-We rely on the [``pre-commit``](https://pre-commit.com) framework, which enables
-automated checks as well as automatic fixes at commit time. This tool is an
-opt-in so not every "drive-by" contributor has to learn and install it, but
-continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so
-styling errors cannot slip in.
+We rely on the [``pre-commit``](https://pre-commit.com) framework, which enables automated checks as well as automatic fixes at commit time.
+This tool is an opt-in so not every "drive-by" contributor has to learn and install it, but continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so styling errors cannot slip in.
 
 We configure `pre-commit` to run a mixed bag of formatters and static checkers.
-The former modify the code in place, while the latter only report errors and
-code smells (such as undefined variables, unused imports, bare `except`
-statements...) but let human developers fix them.
+The former modify the code in place, while the latter only report errors and code smells (such as undefined variables, unused imports, bare `except` statements...) but let human developers fix them.
 
 Our suite of formatter most proeminently includes
 [``black``](https://black.readthedocs.io/en/stable/),
 [``isort``](https://pycqa.github.io/isort/) and
-[``pyupgrade``](https://github.com/asottile/pyupgrade). ``black`` has been
-designed to maximize readability with as few free parameters as possible (In
-many ways, the fact that most of the ``yt`` code developers did not utilize this
-style before it was enforced likely enabled its uptake, as it was seen as a
-choice that "made everyone compromise."), while ``isort`` ensures that all
-``import`` statements are sorted (according to alphabetical order within a
-first/second/third-party categorization), and ``pyupgrade`` modernizes some
-Python idioms according to our minimal support version of the language. In
-particular, ``pyupgrade`` enforces the usage of modern Python
-["f-strings"](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals)
-since we do not support Python version older than 3.6.
+[``pyupgrade``](https://github.com/asottile/pyupgrade).
+``black`` has been designed to maximize readability with as few free parameters as possible
+(In many ways, the fact that most of the ``yt`` code developers did not utilize this style before it was enforced likely enabled its uptake, as it was seen as a choice that "made everyone compromise."),
+while ``isort`` ensures that all ``import`` statements are sorted (according to alphabetical order within a first/second/third-party categorization), and ``pyupgrade`` modernizes some Python idioms according to our minimal support version of the language.
+In particular, ``pyupgrade`` enforces the usage of modern Python ["f-strings"](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals) since we do not support Python version older than 3.6.
 
-For static code analysis we rely on the
-[``flake8``](https://flake8.pycqa.org/en/latest/) framework (an possibly mypy
-for the specialized task of type checking ??)
+For static code analysis we rely on the [``flake8``](https://flake8.pycqa.org/en/latest/) framework (an possibly mypy for the specialized task of type checking ??)
 
-All changes that can be applied via automation (specifically, code formatting)
-are accessible from within the GitHub pull request interface, and are again
-provided by [pre-commit.ci](https://pre-commit.ci). This allows drive-by
-contributions to have their pull requests updated inline by an automated
-process, reducing the need to manually install packages to apply the changes.
+All changes that can be applied via automation (specifically, code formatting) are accessible from within the GitHub pull request interface, and are again provided by [pre-commit.ci](https://pre-commit.ci).
+This allows drive-by contributions to have their pull requests updated inline by an automated process, reducing the need to manually install packages to apply the changes.
 
 ### Type Hinting
 
