Apply suggestions from code review
Co-authored-by: Matthew Turk <matthewturk@gmail.com>

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -96,8 +96,8 @@ For code included in ``yt``, a set of styles are enforced.
 We rely on the [``pre-commit``](https://pre-commit.com) framework, which enables automated checks as well as automatic fixes at commit time.
 This tool is an opt-in so not every "drive-by" contributor has to learn and install it, but continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so styling errors cannot slip in.
 
-We configure `pre-commit` to run a mixed bag of formatters and static checkers.
-The former modify the code in place, while the latter only report errors and code smells (such as undefined variables, unused imports, bare `except` statements...) but let human developers fix them.
+We configure `pre-commit` to run a mixture of formatters and static checkers.
+The former modify the code in place, while the latter only report errors and so-called "code smells" (such as undefined variables, unused imports, bare `except` statements...) but require human developers fix them.
 
 Our suite of formatter most proeminently includes
 [``black``](https://black.readthedocs.io/en/stable/),
