--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -108,7 +108,8 @@ Our suite of formatter most proeminently includes
 while ``isort`` ensures that all ``import`` statements are sorted (according to alphabetical order within a first/second/third-party categorization), and ``pyupgrade`` modernizes some Python idioms according to our minimal support version of the language.
 In particular, ``pyupgrade`` enforces the usage of modern Python ["f-strings"](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals) since we do not support Python version older than 3.6.
 
-For static code analysis we rely on the [``flake8``](https://flake8.pycqa.org/en/latest/) framework (an possibly mypy for the specialized task of type checking ??)
+For static code analysis we rely on the [``flake8``](https://flake8.pycqa.org/en/latest/) framework.
+Effort is underway to enable using `mypy` for the specialized task of type checking.
 
 All changes that can be applied via automation (specifically, code formatting) are accessible from within the GitHub pull request interface, and are again provided by [pre-commit.ci](https://pre-commit.ci).
 This allows drive-by contributions to have their pull requests updated inline by an automated process, reducing the need to manually install packages to apply the changes.
