Adding volume rendering figure to page

--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -32,6 +32,9 @@ Widgyts provides a browser-side Jupyterlab interface to the pixelization routine
 
 ### Software Volume Rendering
 
+<canvas id="vrFigure" resize="true" hidpi="true"></canvas>
+<script type="text/paperscript" canvas="vrFigure" src="images/volume_rendering/vr-figure.js"></script>
+
 ### Hardware-accelerated Volume Rendering
 
 
