First pass at a commit history visualization

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -14,7 +14,84 @@ This three-pronged approach generally has suited the community; the process of b
 However, balancing the needs of a community requiring stable methods for analyzing data against the ease of development suggests that this is a toll worth paying.
 
 In general, the development of `yt` is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
-We discuss the implications of this on sustainability in Section [sec:sustainability].
+We discuss the implications of this on sustainability in Section [sec:sustainability], and provide here a graph of the contributions over time.
+
+<div id="figure-commit-graph"></div>{#fig:commit-graph}
+
+<script>
+var commitGraphSpecification = {
+  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+  "data": {"url": "images/yt_repo.json"},
+  "transform": [
+    {
+      "timeUnit": "yearquarter",
+      "field": "committed_datetime",
+      "as": "commit_quarter"
+    },
+    {
+      "aggregate": [{"op": "count", "as": "count"}],
+      "groupby": ["commit_quarter", "author"]
+    }
+  ],
+  "hconcat": [
+    {
+      "params": [{"name": "commit_range", "select": {"type": "interval", "encodings": ["x"]}}],
+      "mark": "bar",
+      "encoding": {
+        "y": {
+          "aggregate": "sum",
+          "field": "count",
+          "type": "quantitative",
+          "axis": {"title": "# commits"}
+        },
+        "x": {
+          "field": "commit_quarter",
+          "type": "temporal",
+          "scale": {"padding": 0}
+        }
+      }
+    },
+    {
+      "transform": [
+        {"filter": {"param": "commit_range"}},
+        {
+          "aggregate": [{"op": "sum", "field": "count", "as": "author_count"}],
+          "groupby": ["author"]
+        },
+        {
+          "window": [{"op": "rank", "as": "rank"}],
+          "sort": [{"order": "descending", "field": "author_count"}]
+        },
+        {"filter": {"field": "rank", "lte": 10}},
+        {"calculate": "split(datum['author'], ' <', 1)[0]", "as": "author_name"}
+      ],
+      "mark": {"type": "bar"},
+      "encoding": {
+        "y": {
+          "field": "author_name",
+          "type": "nominal",
+          "axis": {"title": "top 10 authors"},
+          "sort": {"order": "ascending", "field": "rank"}
+        },
+        "x": {
+          "type": "quantitative",
+          "field": "author_count",
+          "scale": {"domain": [0, 9000]},
+          "axis": {"title": "number of commits"}
+        }
+      }
+    }
+  ],
+  "config": {
+    "axis": {"labelFontSize": 16, "titleFontSize": 16},
+    "legend": {"labelFontSize": 16, "titleFontSize": 16}
+  }
+};
+
+vegaEmbed('#figure-commit-graph', commitGraphSpecification);
+
+
+</script>
 
 ### Unit Testing {#sec:unit_testing}
 
