Attempt to get @section

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -14,7 +14,7 @@ This three-pronged approach generally has suited the community; the process of b
 However, balancing the needs of a community requiring stable methods for analyzing data against the ease of development suggests that this is a toll worth paying.
 
 In general, the development of `yt` is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
-We discuss the implications of this on sustainability in Section @sec:sustainability, and provide here a graph of the contributions over time.
+We discuss the implications of this on sustainability in Section @section:sustainability, and provide here a graph of the contributions over time.
 
 <div id="figure-commit-graph"></div>{#fig:commit-graph}
 
