--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -38,9 +38,9 @@ Additionally, by providing some routines as options, we can in some instances sp
  * `select_bbox_edge(lower_left, upper_right)`: This is a special-case of the bounding box routine that provides information as to whether or not the *entire* bounding box is included or just a *partial* portion of the bounding box.
 
 We demonstrate a handful of selection operations on a low-resolution dataset below.
-In Figure @fig:reg2 we illustrate the selection of a rectangular prism (i.e., a `region`, like in Section @sec:dobj-region.
-In Figure @fig:sp2, we illustrate the selection of a sphere (i.e., a `sphere`, like in Section @sec:dobj-sphere.
-And, to demonstrate yt's ability to construct boolean selectors from these objects (i.e., Section @sec:dobj-bool we show what the logical `NOT` of these two objects would produce in @fig:reg2_not_sp2.
+In Figure @fig:reg2 we illustrate the selection of a rectangular prism (i.e., a `region`, like in Section @section:dobj-region.
+In Figure @fig:sp2, we illustrate the selection of a sphere (i.e., a `sphere`, like in Section @section:dobj-sphere.
+And, to demonstrate yt's ability to construct boolean selectors from these objects (i.e., Section @section:dobj-bool we show what the logical `NOT` of these two objects would produce in @fig:reg2_not_sp2.
 
 ![
 A selection of data in a low-resolution simulation from a rectangular prism.
